Added controller function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Cruise Ships</title>
 </head>
 <body>
-    
+
+<div id="viewport">
+
+</div>  
+
+
+<script src="src/controller.js"></script>
+<script>
+    const controller = new Controller ();
+</script>
 </body>
 </html>
