--- a/index.html
+++ b/index.html
@@ -6,18 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Cruise Ships</title>
 </head>
 <body>
 
-<div id="viewport">
+<div id="viewport"> 
+<div id="ports">
 
+</div>
+<div id="ship">
+
+</div>
+<button id="sailbutton">Set Sail!</button>
 </div>  
 
-
 <script src="src/controller.js"></script>
+<script src="src/port.js"></script>
+<script src="src/itinerary.js"></script>
+<script src="src/ship.js"></script>
+
 <script>
-    const controller = new Controller ();
+    const itinerary = new Itinerary([
+        new Port('Manchester'),
+        new Port('London'),
+        new Port ('Malaysia'),
+        new Port ('Korea')
+    ])
+    const ship = new Ship(itinerary);
+    const controller = new Controller(ship);
+    controller.renderPorts(itinerary.ports)
+    controller.renderShip()
 </script>
 </body>
 </html>
