Added heads-up display which changes to port accordingly

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <title>Cruise Ships</title>
 </head>
 <body>
-
+<div id="display-box">
+<div id="heads-up-display">
+</div>
+</div>
 <div id="viewport"> 
 <div id="ports">
 
@@ -21,6 +24,7 @@
 
 </div>
 <button id="sailbutton">Set Sail!</button>
+<div id="divMessage"></div>
 </div>  
 
 <script src="src/controller.js"></script>
